--- a/OdeToFood/src/OdeToFood/Pages/Shared/_Layout.cshtml
+++ b/OdeToFood/src/OdeToFood/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
+            @RenderSection("footer", required: false)
+            <vc:restaurant-count></vc:restaurant-count>
             &copy; 2020 - OdeToFood - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
